unpackaged/main/default/objects/Scope_of_Work__c/Scope_of_Work__c.object-meta.xml
<CustomObject>
    <label>Scope of Work</label>
    <nameField>
        <label>Scope of Work Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scope of Work</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>