unpackaged/main/default/objects/Scope_of_Work__c/fields/AC_Access_Circuit_2__c.field-meta.xml
<CustomField>
    <fullName>AC_Access_Circuit_2__c</fullName>
    <label>Access Circuit 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analog Line</fullName>
            </value>
            <value>
                <fullName>Best Effort Internet</fullName>
            </value>
            <value>
                <fullName>Bonded T1</fullName>
            </value>
            <value>
                <fullName>Direct Internet Access</fullName>
            </value>
            <value>
                <fullName>MPLS</fullName>
            </value>
            <value>
                <fullName>PRI</fullName>
            </value>
            <value>
                <fullName>T1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>