unpackaged/main/default/objects/Scope_of_Work__c/fields/AC_Access_Circuit_3_Speed__c.field-meta.xml
<CustomField>
    <fullName>AC_Access_Circuit_3_Speed__c</fullName>
    <inlineHelpText>The speed on sync circuits refers to both upload and download. The speed on async circuits only refers to the download speed. Upload speeds are usually between 10% to 25% of download speeds on async circuits.</inlineHelpText>
    <label>Access Circuit 3 Speed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AC_Access_Circuit_3__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1.5 MB Sync</fullName>
            </value>
            <value>
                <fullName>3.0 MB Sync</fullName>
            </value>
            <value>
                <fullName>4.5 MB Sync</fullName>
            </value>
            <value>
                <fullName>6.0 MB Sync</fullName>
            </value>
            <value>
                <fullName>7.5 MB Sync</fullName>
            </value>
            <value>
                <fullName>9.0 MB Sync</fullName>
            </value>
            <value>
                <fullName>10 MB Sync</fullName>
            </value>
            <value>
                <fullName>20 MB Sync</fullName>
            </value>
            <value>
                <fullName>25 MB Sync</fullName>
            </value>
            <value>
                <fullName>50 MB Sync</fullName>
            </value>
            <value>
                <fullName>100 MB Sync</fullName>
            </value>
            <value>
                <fullName>1.5 MB Async</fullName>
            </value>
            <value>
                <fullName>5 MB Async</fullName>
            </value>
            <value>
                <fullName>10 MB Async</fullName>
            </value>
            <value>
                <fullName>20 MB Async</fullName>
            </value>
            <value>
                <fullName>25 MB Async</fullName>
            </value>
            <value>
                <fullName>50 MB Async</fullName>
            </value>
            <value>
                <fullName>100 MB Async</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>