unpackaged/main/default/objects/Scope_of_Work__c/fields/AC_Access_Circuit_Comments__c.field-meta.xml
<CustomField>
    <fullName>AC_Access_Circuit_Comments__c</fullName>
    <inlineHelpText>Enter any additional information relevant to the installation of the supporting access circuits.</inlineHelpText>
    <label>Access Circuit Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>