unpackaged/main/default/objects/Scope_of_Work__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scope of Work</relationshipLabel>
    <relationshipName>Scope_of_Work</relationshipName>
    <type>Lookup</type>
</CustomField>