unpackaged/main/default/objects/Scope_of_Work__c/fields/App_Call_Accounting__c.field-meta.xml
<CustomField>
    <fullName>App_Call_Accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Accounting</label>
    <type>Checkbox</type>
</CustomField>