unpackaged/main/default/objects/Scope_of_Work__c/fields/App_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>App_Call_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if the Client is implementing a new or converting an existing call center.</inlineHelpText>
    <label>Call Center</label>
    <type>Checkbox</type>
</CustomField>