unpackaged/main/default/objects/Scope_of_Work__c/fields/App_Call_Center_Notes__c.field-meta.xml
<CustomField>
    <fullName>App_Call_Center_Notes__c</fullName>
    <label>Call Center Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>