unpackaged/main/default/objects/Scope_of_Work__c/fields/App_Faxlync__c.field-meta.xml
<CustomField>
    <fullName>App_Faxlync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Faxlync</label>
    <type>Checkbox</type>
</CustomField>