unpackaged/main/default/objects/Scope_of_Work__c/fields/App_Faxlync_Notes__c.field-meta.xml
<CustomField>
    <fullName>App_Faxlync_Notes__c</fullName>
    <label>Faxlync Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>