unpackaged/main/default/objects/Scope_of_Work__c/fields/App_Office_365__c.field-meta.xml
<CustomField>
    <fullName>App_Office_365__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Office 365</label>
    <type>Checkbox</type>
</CustomField>