unpackaged/main/default/objects/Scope_of_Work__c/fields/App_Office_365_Notes__c.field-meta.xml
<CustomField>
    <fullName>App_Office_365_Notes__c</fullName>
    <label>Office 365 Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>