unpackaged/main/default/objects/Scope_of_Work__c/fields/Business_Reporter_Comments__c.field-meta.xml
<CustomField>
    <fullName>Business_Reporter_Comments__c</fullName>
    <label>Business Reporter Comments</label>
    <type>TextArea</type>
</CustomField>