unpackaged/main/default/objects/Scope_of_Work__c/fields/Call_Center_Max_Concurrent_Users__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Max_Concurrent_Users__c</fullName>
    <label>Call Center Max Concurrent Users</label>
    <length>8</length>
    <type>Text</type>
</CustomField>