unpackaged/main/default/objects/Scope_of_Work__c/fields/Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Type__c</fullName>
    <label>Configuration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IPro Data Center</fullName>
                <default>true</default>
                <label>IPro Data Center</label>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Customer Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>