unpackaged/main/default/objects/Scope_of_Work__c/fields/Connectwise_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Connectwise_External_Id__c</fullName>
    <label>Connectwise External Id</label>
    <length>55</length>
    <type>Text</type>
</CustomField>