unpackaged/main/default/objects/Scope_of_Work__c/fields/Data_Security__c.field-meta.xml
<CustomField>
    <fullName>Data_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Security</label>
    <type>Checkbox</type>
</CustomField>