unpackaged/main/default/objects/Scope_of_Work__c/fields/Data_Security_Comments__c.field-meta.xml
<CustomField>
    <fullName>Data_Security_Comments__c</fullName>
    <label>Data Security Comments</label>
    <type>TextArea</type>
</CustomField>