unpackaged/main/default/objects/Scope_of_Work__c/fields/Disposal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Comments__c</fullName>
    <label>Used Equipment Removal/Disposal Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>