unpackaged/main/default/objects/Scope_of_Work__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Note</fullName>
            </value>
            <value>
                <fullName>AE Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>