unpackaged/main/default/objects/Scope_of_Work__c/fields/efax__c.field-meta.xml
<CustomField>
    <fullName>efax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>efax</label>
    <type>Checkbox</type>
</CustomField>