unpackaged/main/default/objects/Scope_of_Work__c/fields/eFax_Comments__c.field-meta.xml
<CustomField>
    <fullName>eFax_Comments__c</fullName>
    <label>eFax Comments</label>
    <type>TextArea</type>
</CustomField>