unpackaged/main/default/objects/Scope_of_Work__c/fields/Features_Features__c.field-meta.xml
<CustomField>
    <fullName>Features_Features__c</fullName>
    <inlineHelpText>Please list the features discussed during the sales process that should be the focus of operations during the installation and training process.</inlineHelpText>
    <label>Primary Features</label>
    <type>TextArea</type>
</CustomField>