unpackaged/main/default/objects/Scope_of_Work__c/fields/Firewall_Comments__c.field-meta.xml
<CustomField>
    <fullName>Firewall_Comments__c</fullName>
    <label>Firewall Comments</label>
    <type>TextArea</type>
</CustomField>