unpackaged/main/default/objects/Scope_of_Work__c/fields/Hardware_comments__c.field-meta.xml
<CustomField>
    <fullName>Hardware_comments__c</fullName>
    <label>Hardware comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>