unpackaged/main/default/objects/Scope_of_Work__c/fields/High_Aavailability_Comments__c.field-meta.xml
<CustomField>
    <fullName>High_Aavailability_Comments__c</fullName>
    <label>High Aavailability Comments</label>
    <type>TextArea</type>
</CustomField>