unpackaged/main/default/objects/Scope_of_Work__c/fields/High_Availability__c.field-meta.xml
<CustomField>
    <fullName>High_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Availability</label>
    <type>Checkbox</type>
</CustomField>