unpackaged/main/default/objects/Scope_of_Work__c/fields/Image_1_Installed_Where__c.field-meta.xml
<CustomField>
    <fullName>Image_1_Installed_Where__c</fullName>
    <label>Image 1 Installed Where</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IPro Data Center</fullName>
            </value>
            <value>
                <fullName>Client Data Center</fullName>
            </value>
            <value>
                <fullName>Client Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>