unpackaged/main/default/objects/Scope_of_Work__c/fields/Image_2__c.field-meta.xml
<CustomField>
    <fullName>Image_2__c</fullName>
    <label>Image 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>CX Controller</fullName>
            </value>
            <value>
                <fullName>MXe Controller</fullName>
            </value>
            <value>
                <fullName>MXe Controller Fault Tolerant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>