unpackaged/main/default/objects/Scope_of_Work__c/fields/Image_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Image_User_Count__c</fullName>
    <inlineHelpText>How many users will reside on the image?</inlineHelpText>
    <label>Image User Count</label>
    <length>8</length>
    <type>Text</type>
</CustomField>