unpackaged/main/default/objects/Scope_of_Work__c/fields/Installation_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Installation_Timeline__c</fullName>
    <label>Installation Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Simple-30 Days (No Access Circuit or Port Orders)</fullName>
            </value>
            <value>
                <fullName>Intermediate 45 days (Porting or Circuit Changes)</fullName>
            </value>
            <value>
                <fullName>Complex-45 to 60 Days</fullName>
            </value>
            <value>
                <fullName>Expedited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>