unpackaged/main/default/objects/Scope_of_Work__c/fields/IPro_Providing_Access_Circuit__c.field-meta.xml
<CustomField>
    <fullName>IPro_Providing_Access_Circuit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IPro Providing Access Circuit</label>
    <type>Checkbox</type>
</CustomField>