unpackaged/main/default/objects/Scope_of_Work__c/fields/Ipro_Providing_Firewall__c.field-meta.xml
<CustomField>
    <fullName>Ipro_Providing_Firewall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ipro Providing Firewall</label>
    <type>Checkbox</type>
</CustomField>