unpackaged/main/default/objects/Scope_of_Work__c/fields/Ipro_Providing_UnManaged_Switching__c.field-meta.xml
<CustomField>
    <fullName>Ipro_Providing_UnManaged_Switching__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ipro Providing UnManaged Switching</label>
    <type>Checkbox</type>
</CustomField>