unpackaged/main/default/objects/Scope_of_Work__c/fields/Justification_For_Expedited_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Justification_For_Expedited_Timeline__c</fullName>
    <label>Justification For Expedited Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Client Move Date</fullName>
            </value>
            <value>
                <fullName>Contract Expiration</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>