unpackaged/main/default/objects/Scope_of_Work__c/fields/MiCollab__c.field-meta.xml
<CustomField>
    <fullName>MiCollab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MiCollab</label>
    <type>Checkbox</type>
</CustomField>