unpackaged/main/default/objects/Scope_of_Work__c/fields/Net_Client_It_Staff__c.field-meta.xml
<CustomField>
    <fullName>Net_Client_It_Staff__c</fullName>
    <inlineHelpText>Designates if the Client has their own IT staff or uses and external company for It staff.</inlineHelpText>
    <label>Client IT Staff ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>