unpackaged/main/default/objects/Scope_of_Work__c/fields/Net_Client_PoE__c.field-meta.xml
<CustomField>
    <fullName>Net_Client_PoE__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the Client currently have PoE switches?</inlineHelpText>
    <label>Client PoE</label>
    <type>Checkbox</type>
</CustomField>