unpackaged/main/default/objects/Scope_of_Work__c/fields/Net_Does_the_Client_have_Wireless__c.field-meta.xml
<CustomField>
    <fullName>Net_Does_the_Client_have_Wireless__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does the Client have Wireless?</label>
    <type>Checkbox</type>
</CustomField>