unpackaged/main/default/objects/Scope_of_Work__c/fields/Net_PoE_Comments__c.field-meta.xml
<CustomField>
    <fullName>Net_PoE_Comments__c</fullName>
    <inlineHelpText>Describe the Clients PoE configuration. For instance: They do not have any and PoE must be provided by IPro or they do have PoE switches and the Make and Models are as follows.</inlineHelpText>
    <label>PoE Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>