unpackaged/main/default/objects/Scope_of_Work__c/fields/Net_VPN_IPSec__c.field-meta.xml
<CustomField>
    <fullName>Net_VPN_IPSec__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if Client is currently using or requires the use of IPSec VPN's. IPSec is only supported by IPro Media on IPro Media routers.</inlineHelpText>
    <label>VPN IPSec</label>
    <type>Checkbox</type>
</CustomField>