unpackaged/main/default/objects/Scope_of_Work__c/fields/Net_VPN_PPTP__c.field-meta.xml
<CustomField>
    <fullName>Net_VPN_PPTP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if Client is currently using or requires the use of PPTP VPN's. PPTP is only supported by IPro Media on IPro Media routers.</inlineHelpText>
    <label>VPN PPTP</label>
    <type>Checkbox</type>
</CustomField>