unpackaged/main/default/objects/Scope_of_Work__c/fields/Net_VPN_PPTP_Comments__c.field-meta.xml
<CustomField>
    <fullName>Net_VPN_PPTP_Comments__c</fullName>
    <inlineHelpText>If VPN PPTP is checked, describe the Client requirement. How many PPTP VPN's need to be configured and how are they used.</inlineHelpText>
    <label>VPN PPTP Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>