unpackaged/main/default/objects/Scope_of_Work__c/fields/Net_Wireless_Comments__c.field-meta.xml
<CustomField>
    <fullName>Net_Wireless_Comments__c</fullName>
    <inlineHelpText>Describe the Clients requirement for Wireless. Will the Mitel telephones need to work on the wireless network?</inlineHelpText>
    <label>Wireless Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>