unpackaged/main/default/objects/Scope_of_Work__c/fields/Number_of_Images__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Images__c</fullName>
    <label>Number of Images</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>