unpackaged/main/default/objects/Scope_of_Work__c/fields/Other_Application_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Application_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Application 2</label>
    <type>Checkbox</type>
</CustomField>