unpackaged/main/default/objects/Scope_of_Work__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <inlineHelpText>Provide a brief overview of the Client. How long in business. What they do. What industry vertical do they belong to. Who are the key players.Any key facts that Operations needs to know.</inlineHelpText>
    <label>Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>