unpackaged/main/default/objects/Scope_of_Work__c/fields/Port_Analog_Lines__c.field-meta.xml
<CustomField>
    <fullName>Port_Analog_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Port Analog Lines</label>
    <type>Checkbox</type>
</CustomField>