unpackaged/main/default/objects/Scope_of_Work__c/fields/Port_Analog_Lines_Comments__c.field-meta.xml
<CustomField>
    <fullName>Port_Analog_Lines_Comments__c</fullName>
    <description>Analog Lines – (number of lines and types, i.e., Main and roll overs, fax, modem, alarm, elevator, etc.)</description>
    <inlineHelpText>Analog Lines – (number of lines and types, i.e., Main and roll overs, fax, modem, alarm, elevator, etc.)</inlineHelpText>
    <label>Port Analog Lines Comments</label>
    <type>TextArea</type>
</CustomField>