unpackaged/main/default/objects/Scope_of_Work__c/fields/Port_Info__c.field-meta.xml
<CustomField>
    <fullName>Port_Info__c</fullName>
    <inlineHelpText>Information Related to Port</inlineHelpText>
    <label>Port Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>