unpackaged/main/default/objects/Scope_of_Work__c/fields/Port_SIP__c.field-meta.xml
<CustomField>
    <fullName>Port_SIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Port SIP</label>
    <type>Checkbox</type>
</CustomField>