unpackaged/main/default/objects/Scope_of_Work__c/fields/Port_SIP_Comments__c.field-meta.xml
<CustomField>
    <fullName>Port_SIP_Comments__c</fullName>
    <description>SIP (number of channels and number of DID)</description>
    <inlineHelpText>SIP (number of channels and number of DID)</inlineHelpText>
    <label>Port SIP Comments</label>
    <type>TextArea</type>
</CustomField>