unpackaged/main/default/objects/Scope_of_Work__c/fields/Port_T1_or_Pri__c.field-meta.xml
<CustomField>
    <fullName>Port_T1_or_Pri__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Port T1 or Pri</label>
    <type>Checkbox</type>
</CustomField>