unpackaged/main/default/objects/Scope_of_Work__c/fields/Port_T1_or_Pri_Comments__c.field-meta.xml
<CustomField>
    <fullName>Port_T1_or_Pri_Comments__c</fullName>
    <description>T1, PRI (number of PRI or T1 and number of DID)</description>
    <inlineHelpText>T1, PRI (number of PRI or T1 and number of DID)</inlineHelpText>
    <label>Port T1 or Pri Comments</label>
    <type>TextArea</type>
</CustomField>