unpackaged/main/default/objects/Scope_of_Work__c/fields/Port_T1_or_Pri_DID_Count__c.field-meta.xml
<CustomField>
    <fullName>Port_T1_or_Pri_DID_Count__c</fullName>
    <label>Port T1 or Pri DID Count</label>
    <length>8</length>
    <type>Text</type>
</CustomField>