unpackaged/main/default/objects/Scope_of_Work__c/fields/Primary_Decision_Factors__c.field-meta.xml
<CustomField>
    <fullName>Primary_Decision_Factors__c</fullName>
    <inlineHelpText>Please enter the primary reasons expressed by the client for making this purchase.</inlineHelpText>
    <label>Primary Decision Factors</label>
    <type>TextArea</type>
</CustomField>