unpackaged/main/default/objects/Scope_of_Work__c/fields/Training_Comments__c.field-meta.xml
<CustomField>
    <fullName>Training_Comments__c</fullName>
    <inlineHelpText>Please enter any additional comments or special training needs required for this Client Opportunity</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>