unpackaged/main/default/objects/Scope_of_Work__c/fields/Training_Console__c.field-meta.xml
<CustomField>
    <fullName>Training_Console__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enter the number of primary and departmental operators, receptionists or executive screeners that require training. Provide a detailed narrative of the requirements and attach a roster if needed.</inlineHelpText>
    <label>Console</label>
    <type>Checkbox</type>
</CustomField>