unpackaged/main/default/objects/Scope_of_Work__c/fields/Training_Console_Users__c.field-meta.xml
<CustomField>
    <fullName>Training_Console_Users__c</fullName>
    <inlineHelpText>Enter the number of console users requiring training for this Client Opportunity.</inlineHelpText>
    <label>Console Users</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>